Fix cut off text

--- a/www/assets/css/v35.css
+++ b/www/assets/css/v35.css
@@ -137,6 +137,9 @@ main h1, main h2, main h3 {
   margin-bottom: var(--padding);
 }
 
+.v35-fine-print .text .table-wrap {
+  min-width: 0;
+}
 .v35-fine-print .text > ul {
   margin-left: -.625rem;
 }
@@ -210,6 +213,7 @@ main h1, main h2, main h3 {
 }
 .grid > .column {
   margin-bottom: var(--gutter);
+  min-width: 0;
 }
 .mb-3 {
   margin-bottom: .75rem;
